--- a/public/index.html
+++ b/public/index.html
@@ -33,12 +33,12 @@
 					<div class="form-control">
 						<label for="room">Room</label>
 						<select name="room" id="room">
-							<option value="JavaScript">JavaScript</option>
-							<option value="Python">Python</option>
-							<option value="PHP">PHP</option>
-							<option value="C#">C#</option>
-							<option value="Ruby">Ruby</option>
-							<option value="Java">Java</option>
+							<option value="Area51">Area51</option>
+							<option value="Hogwarts">Hogwarts</option>
+							<option value="Batcave">Batcave</option>
+							<option value="DragonStone">DragonStone</option>
+							<option value="MacLaren's Pub">MacLaren's Pub</option>
+							<option value="Pearson Specter Litt">Pearson Specter Litt</option>
 						</select>
 					</div>
 					<button type="submit" class="btn">Join Chat</button>
