--- a/public/index.html
+++ b/public/index.html
@@ -11,17 +11,18 @@
 			crossorigin="anonymous"
 		/>
 		<link rel="stylesheet" href="css/style.css" />
+		<script src="https://kit.fontawesome.com/d470e43a48.js" crossorigin="anonymous"></script>
 		<title>FastChat</title>
 	</head>
 	<body>
 		<div class="join-container">
 			<header class="join-header">
-				<h1><i class="fas fa-smile"></i> FastChat</h1>
+				<h1><i class="fas fa-comment-dots ficon"></i>FastChat</h1>
 			</header>
 			<main class="join-main">
 				<form action="chat.html">
 					<div class="form-control">
-						<label for="username">Username</label>
+						<label for="username" style="font-weight: bold;">Username</label>
 						<input
 							type="text"
 							name="username"
@@ -31,7 +32,7 @@
 						/>
 					</div>
 					<div class="form-control">
-						<label for="room">Room</label>
+						<label for="room" style="font-weight: bold;">Room</label>
 						<select name="room" id="room">
 							<option value="Area51">Area51</option>
 							<option value="Hogwarts">Hogwarts</option>
